--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,37 +9,31 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v2
-      - name: Instala JDK 17
+      - name: Configurar o repositório
+        uses: actions/checkout@v3
+
+      - name: Configurar JDK 17
         uses: actions/setup-java@v3
         with:
-          java-version: 17
           distribution: 'temurin'
-          cache: maven
+          java-version: '17'
 
-      - name: Gera relatório de cobertura
-        run: |
-          mvn -B package --file pom.xml
+      - name: Instalar dependências
+        run: ./mvnw install -DskipTests
 
-      - name: JaCoCo Code Coverage Report
-        id: jacoco_reporter
-        uses: PavanMudigonda/jacoco-reporter@v5.0
+      - name: Compilar o Projeto
+        run: ./mvnw compile
+
+      - name: Executar Testes
+        run: ./mvnw test
+
+      - name: Gerar Relatório de Cobertura com JaCoCo
+        run: ./mvnw jacoco:report
+
+      - name: Publicar Relatório de Cobertura
+        uses: actions/upload-artifact@v3
         with:
-          coverage_results_path: target/site/jacoco/jacoco.xml
-          coverage_report_name: Coverage
-          coverage_report_title: JaCoCo
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          skip_check_run: false
-          minimum_coverage: 80
-          fail_below_threshold: false
-          publish_only_summary: false
-
-      - name: Add Jacocoo report to workflow run summary
-        run: |
-          echo "| Outcome | Value |" >> $GITHUB_STEP_SUMMARY
-          echo "| --- | --- |" >> $GITHUB_STEP_SUMMARY
-          echo "| Code Coverage % | ${{ steps.jacoco_reporter.outputs.coverage_percentage }} |" >> $GITHUB_STEP_SUMMARY
-          echo "| :heavy_check_mark: Number of Lines Covered | ${{ steps.jacoco_reporter.outputs.covered_lines }} |" >> $GITHUB_STEP_SUMMARY
-          echo "| :x: Number of Lines Missed | ${{ steps.jacoco_reporter.outputs.missed_lines }} |" >> $GITHUB_STEP_SUMMARY
-          echo "| Total Number of Lines | ${{ steps.jacoco_reporter.outputs.total_lines }} |" >> $GITHUB_STEP_SUMMARY
+          name: relatorio-cobertura-jacoco
+          path: target/site/jacoco
