--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,4 +33,8 @@ jobs:
         run: ./mvnw jacoco:report
 
       - name: Publicar Resumo do Relatório de Cobertura
-        run: echo "## Relatório de Cobertura de Testes\n\n$(cat target/site/jacoco/index.html)" >> $GITHUB_STEP_SUMMARY
+        run: |
+          COVERAGE=$(grep -A 2 -m 1 '<td>Total</td>' target/site/jacoco/index.html | grep -Eo '[0-9]+(\.[0-9]+)?%' | head -n 1)
+          echo "## Relatório de Cobertura de Testes" >> $GITHUB_STEP_SUMMARY
+          echo "**Cobertura Total:** $COVERAGE" >> $GITHUB_STEP_SUMMARY
+          echo "![Visualizar Relatório](https://github.com/${{ github.repository }}/blob/${{ github.sha }}/target/site/jacoco/index.html)" >> $GITHUB_STEP_SUMMARY
