--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,14 +32,5 @@ jobs:
       - name: Gerar Relatório de Cobertura com JaCoCo
         run: ./mvnw jacoco:report
 
-      - name: Publicar Relatório de Cobertura no Sumário
-        uses: dorny/paths-filter@v2
-        with:
-          filters: |
-            jacoco:
-              - 'target/site/jacoco/jacoco.xml'
-
-      - name: Mostrar Relatório de Cobertura no Sumário
-        uses: 'matheusvanzan/jacoco-report@v2'
-        with:
-          path: 'target/site/jacoco/jacoco.xml'
+      - name: Publicar Resumo do Relatório de Cobertura
+        run: echo "## Relatório de Cobertura de Testes\n\n$(cat target/site/jacoco/index.html)" >> $GITHUB_STEP_SUMMARY
